<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:paddingTop="12dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/rounded_black">
    
    <ImageView
        android:id="@+id/player_cutout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/player_image"/>

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/player_cutout"
        android:layout_toStartOf="@id/position"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        android:text="@string/player_name"/>

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewEnd"
        android:textColor="@color/lightGrey"
        android:text="@string/position"/>

</RelativeLayout>