<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/team_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:titleEnabled="false"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/team_logo"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="76dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/home_image"
                    android:src="@mipmap/ic_launcher_round"/>

                <TextView
                    android:id="@+id/team_name"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_home_name"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/team_formed_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/year"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/team_stadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/stadium"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_team"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:contentScrim="@color/black"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fitsSystemWindows="true"
            app:tabSelectedTextColor="@color/colorAccent"
            android:background="@color/black" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ultraDarkGrey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>